c/examples/writing-a-c-compiler-tests/tests/chapter_18/valid/extra_credit/other_features/decr_arrow_lexing.c
// Make sure we correctly parse postfix -- followed by >
int main(void) {
    int arr[3] = {0, 1, 2};
    int *ptr = arr + 2;
    if(ptr-->arr) {
        return 0; // success
    }
    return 1; // fail
}