c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/scalar_required/subscript_struct.c
struct s {
  int a;
};

int main(void) {
  struct s x = {1};
  return x[0]; // can only subscript pointers, not structures
}